# deepseek-v4-a100-sglang

./: .gitignore  LICENSE  MANIFEST.in  README.md  dsv4_a100_patch.py  pyproject.toml  repro_illegal_access.py  sitecustomize.py  test_dsv4_a100_patch.py  test_mxfp4_int8_moe.py  test_triton_kernels.py
docs/: benchmarks.md  deepseek_v4_sparse_attention.md  design.md  e2e_benchmark.md  indexer_query_cp.md  micro_benchmark.md  model_conversion.md  moe_operator_limitations.md  mtp.md  mxfp4_int8_matmul_design.md  mxfp4_int8_moe.md  runtime_env.md  sglang_version.md
dsv4_a100_patch/: __init__.py  patch.py
dsv4_a100_patch/sglang_jit_patches/: mxfp4_int8_dense.py  mxfp4_int8_moe.py
dsv4_a100_patch/sglang_jit_patches/csrc/gemm/mxfp4_int8/: mxfp4_cutlass_core.cuh  (+3 more)
dsv4_a100_patch/triton_kernels/: __init__.py  attention.py  indexer.py  kv_ops.py  mxfp4_int8_moe.py  ogs_bitmatrix_patch.py
scripts/: bench_fair_int4_vs_mxfp4_int8_moe.py  bench_int4_vs_mxfp4_int8_moe.py  bench_mxfp4_int8_jit_dense.py  bench_mxfp4_int8_jit_moe.py  convert_deepseek_v4_flash_moe_int4.py  convert_deepseek_v4_flash_moe_mxfp4_bf16.py  launch_dsv4_flash_int4_sglang.sh  launch_dsv4_flash_mxfp4_sglang.sh  repro_illegal_access.py
sglang_jit_patches/: __init__.py  jit_loader.py  mxfp4_int8_moe.py
sglang_jit_patches/csrc/gemm/mxfp4_int8/: mxfp4_int8_moe_entry.cuh  mxfp4_moe_cutlass_core.cuh
tests/: test_dsv4_a100_patch.py  test_mxfp4_int8_moe.py  test_triton_kernels.py
triton_kernels/: README.md  __init__.py  attention.py  elementwise.py  indexer.py  kv_ops.py  mxfp4_int8_moe.py  mxfp4_moe_ogs.py
